<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>tds</groupId>
  <artifactId>AppMusic</artifactId>
  <version>1</version>
  <packaging>jar</packaging>

  <name>AppMusic</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>tds</groupId>
      <artifactId>driver</artifactId>
      <scope>system</scope>
      <version>1</version>
      <systemPath>${basedir}/lib/DriverPersistencia.jar</systemPath>
    </dependency>
  </dependencies>
</project>
